# foodemoji

./: .coveragerc  .gitignore  .travis.yml  README.md  __init__.py  foodemojis.json  pyproject.toml  setup.py  todo.txt  tox.ini
.github/workflows/: pythonpackage.yml
docs/: conf.py  index.rst  requirements.txt
example/: example.py
foodemoji/: __init__.py  foodemojis.json
foodemoji/tests/: requirements.txt  speed.py
tests/: __init__.py  requirements.txt  speed.py  test_basiclinebyline.py  test_decorate.py
