[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "german-foodemoji"
dynamic = ["version"]
authors = [{name = "cuzi", email = "cuzi@openmail.cc"}]
license = {text = "MIT"}
description = "Decorate German text with food specific emojis"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Communications :: Chat",
    "Topic :: Printing",
    "Topic :: Text Processing :: General",
]

[project.urls]
Homepage = "https://github.com/cvzi/foodemoji"
Documentation = "https://foodemoji.readthedocs.io/"
Downloads = "https://pypi.org/project/german-foodemoji/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
testing = [
    "emoji",
    "packaging",
]

[tool.setuptools]
packages = ["foodemoji"]
zip-safe = true

[tool.setuptools.package-data]
foodemoji = ["foodemojis.json"]

[tool.setuptools.dynamic]
version = {attr = "foodemoji.__version__"}
